--- a/src/content/graphos/enterprise/index.mdx
+++ b/src/content/graphos/enterprise/index.mdx
@@ -161,5 +161,5 @@ Additionally, Enterprise organizations can export an [audit log](../org/audit-lo
 GraphOS Studio offers a performant and intuitive UI to help all GraphOS users monitor and understand their supergraph's usage and performance.
 The following features are only available to GraphOS Enteprise organizations:
 
-- The [Apollo Datadog integration](../metrics/datadog-integration) let you forward performance metrics to your Datadog account. Datadog supports an advanced function API, which enables you to create sophisticated visualizations and alerts for GraphQL metrics.
+- The [Apollo Datadog integration](../metrics/datadog-integration) lets you forward performance metrics to your Datadog account. Datadog supports an advanced function API, which enables you to create sophisticated visualizations and alerts for GraphQL metrics.
 - [Build status notifications](../metrics/notifications/) let you notify your team via webhook whenever GraphOS attempts to build a new supergraph schema for your federated graph.
