--- a/src/content/graphos/enterprise/index.mdx
+++ b/src/content/graphos/enterprise/index.mdx
@@ -9,13 +9,13 @@ See the left navigation for a list of all Enterprise-specific articles from acro
 
 <Tip>
 
-To compare GraphOS feature support across all plan types, see our [pricing page](https://www.apollographql.com/pricing/).
+To compare GraphOS feature support across all plan types, see the [pricing page](https://www.apollographql.com/pricing/).
 
 </Tip>
 
 ## Enterprise trial
 
-You can sign up for a GraphOS Enterprise trial to freely test out most Enterprise features for the duration of the trial period.
+You can sign up for a GraphOS Enterprise trial to test out most Enterprise features for the duration of the trial period.
 
 <p>
   <ButtonLink
@@ -159,7 +159,7 @@ Additionally, Enterprise organizations can export an [audit log](../org/audit-lo
 ## Metrics and reporting
 
 GraphOS Studio offers a performant and intuitive UI to help all GraphOS users monitor and understand their supergraph's usage and performance.
-The following features are only available to GraphOS Enteprise organizations:
+The following features are only available to GraphOS Enterprise organizations:
 
 - The [Apollo Datadog integration](../metrics/datadog-integration) lets you forward performance metrics to your Datadog account. Datadog supports an advanced function API, which enables you to create sophisticated visualizations and alerts for GraphQL metrics.
 - [Build status notifications](../metrics/notifications/) let you notify your team via webhook whenever GraphOS attempts to build a new supergraph schema for your federated graph.
