--- a/src/content/technotes/TN0047-error-status-code-200.mdx
+++ b/src/content/technotes/TN0047-error-status-code-200.mdx
@@ -10,9 +10,15 @@ tags: [best-practices, error-handling]
 In the realm of API development, HTTP status codes serve as crucial indicators of request success or failure.
 However, when it comes to GraphQL, the traditional approach of using REST/HTTP error codes becomes inadequate.
 GraphQL introduces a paradigm shift in how APIs are designed and operated, rendering conventional status codes insufficient for capturing the nuances of GraphQL operations, especially in the context of parallel operations.
-Let's delve into why GraphQL 200 status codes are the new norm and why using REST/HTTP error codes doesn't make sense in the GraphQL ecosystem.
 
-## The Nature of GraphQL Operations
+>
+> TLDR; The GraphQL 200 status codes signify the successful processing of a request at the Apollo Router level, but they do not encapsulate the outcome of individual operations or the presence of errors within a GraphQL response.
+> Attempting to shoehorn HTTP error codes into the GraphQL paradigm overlooks the unique characteristics and capabilities of GraphQL, such as granular error handling, parallel execution, and asynchronous patterns.
+> 
+> You can learn more about status codes in GraphQL by reading the [GraphQL-over-HTTP](https://graphql.github.io/graphql-over-http/draft/) specification.
+>
+
+## Nature of GraphQL Operations
 
 In a typical REST API, each endpoint corresponds to a specific resource or action, making it straightforward to map HTTP status codes to the outcome of each request.
 However, GraphQL operates differently. Instead of multiple endpoints, GraphQL has a single endpoint that serves as an entry point for executing queries, mutations, and subscriptions.
@@ -29,20 +35,11 @@ This level of granularity enables clients to understand and react to errors more
 One of the most powerful features of GraphQL is its ability to execute multiple operations in parallel.
 This means that even if one part of a GraphQL operation fails, other parts may still succeed.
 In contrast, REST APIs typically follow a serial execution model, where one failed request can halt the entire process.
+
 Therefore, using HTTP status codes to convey the outcome of parallel GraphQL operations would be impractical and misleading.
 
-## The Significance of GraphQL 200 Status Codes
+## Significance of 200 Status Codes
 
-In GraphQL, the presence of a 200 status code indicates that the request was successful from the router's perspective.
+In GraphQL, the presence of a 200 status code indicates that the request was successful from the Apollo Router's perspective.
 This does not necessarily mean that the client received all the data it requested without any errors.
-Instead, it signifies that the GraphQL operation as a whole was processed without encountering any issues, regardless of the outcome of individual fields.
-
-## Conclusion
-
-The GraphQL 200 status codes signify the successful processing of a request at the router level, but they do not encapsulate the outcome of individual operations or the presence of errors within a GraphQL response.
-Attempting to shoehorn HTTP error codes into the GraphQL paradigm overlooks the unique characteristics and capabilities of GraphQL, such as granular error handling, parallel execution, and asynchronous patterns.
-As GraphQL continues to gain traction in the API landscape, embracing GraphQL-specific conventions, including 200 status codes, is essential for building robust and efficient GraphQL APIs.
-
-## Additional Resources
-
-- [GraphQL-over-HTTP](https://graphql.github.io/graphql-over-http/draft/)
+Instead, it signifies that the GraphQL operation as a whole was processed without encountering any issues, regardless of the outcome of individual field resolvers.
