--- a/src/content/technotes/TN0047-error-status-code-200.mdx
+++ b/src/content/technotes/TN0047-error-status-code-200.mdx
@@ -1,7 +1,7 @@
 ---
 title: Error! Status Code 200?
 subtitle: Granular error handling in your API
-description: Learn how to frame status codes within graphql errors
+description: Learn GraphQL uniquly handles errors and how that compares to traditional REST APIs.
 published: 2024-02-09
 id: TN0047
 tags: [best-practices, error-handling]
