Update 'README' to 'description'

--- a/src/content/graphos/delivery/schema-proposals/review.mdx
+++ b/src/content/graphos/delivery/schema-proposals/review.mdx
@@ -21,7 +21,7 @@ Proposal creators and reviewers can review different aspects of a proposal from 
 />
 
 - A proposal's **Overview** tab is where team members with [the appropriate permissions](./configuration#configure-permissions-and-approvals) can:
-  - View and edit a proposal's description by clicking the pencil icon on the **README**.
+  - View and edit a proposal's description by clicking the pencil icon on the description.
   - Use the **Proposal activity** log to monitor changes and leave commentary.
   - View the proposal's status and author.
   - Select reviewers.
