--- a/src/content/graphos/delivery/schema-proposals/creation.mdx
+++ b/src/content/graphos/delivery/schema-proposals/creation.mdx
@@ -6,12 +6,6 @@ description: Propose GraphQL schema changes in GraphOS Studio. Edit and lint sch
 
 <EnterpriseFeature />
 
-<PreviewFeature>
-
-Schema proposals are currently in invite-only [preview](/resources/product-launch-stages/#preview). Get in touch with your account team if you'd like to request access or have any questions or feedback.
-
-</PreviewFeature>
-
 This article describes actions in the **Proposal creation** stage of the [schema proposal workflow](./#proposal-workflow).
 
 <SchemaProposalCreationMermaid />
@@ -63,11 +57,11 @@ Follow the steps below to create a new proposal:
 
    </Tip>
 
-4. Optionally, enter the rationale for the proposed changes. This rationale appears as your proposal's README on the proposal's overview and gives collaborators and reviewers context for the proposed changes. This input accepts [Markdown](https://www.markdownguide.org/getting-started/).
+4. Optionally, enter the rationale for the proposed changes. This rationale appears as your proposal's **Description** on the proposal's overview and gives collaborators and reviewers context for the proposed changes. This input accepts [Markdown](https://www.markdownguide.org/getting-started/).
 
     <Note>
 
-    If you want to edit the proposal's README later, you can do so from its **Overview** tab.
+    If you want to edit the proposal's description later, you can do so from its **Overview** tab.
 
     </Note>
 
