--- a/src/content/graphos/delivery/schema-proposals/review.mdx
+++ b/src/content/graphos/delivery/schema-proposals/review.mdx
@@ -6,12 +6,6 @@ description: Review and provide feedback on GraphQL schema proposals in GraphOS 
 
 <EnterpriseFeature />
 
-<PreviewFeature>
-
-Schema proposals are currently in invite-only [preview](/resources/product-launch-stages/#preview). Get in touch with your account team if you'd like to request access or have any questions or feedback.
-
-</PreviewFeature>
-
 This article describes actions in the **Proposal review** stage of the [schema proposal workflow](./#proposal-workflow).
 
 <SchemaProposalReviewMermaid />
@@ -27,7 +21,7 @@ Proposal creators and reviewers can review different aspects of a proposal from 
 />
 
 - A proposal's **Overview** tab is where team members with [the appropriate permissions](./configuration#configure-permissions-and-approvals) can:
-  - View and edit a proposal's description by clicking the pencil icon on the **README**.
+  - View and edit a proposal's description by clicking the pencil icon on the description.
   - Use the **Proposal activity** log to monitor changes and leave commentary.
   - View the proposal's status and author.
   - Select reviewers.
