DOCS-48 tweak tab UX to underline label, copyedit example

--- a/src/content/graphos/basics/graphs/index.mdx
+++ b/src/content/graphos/basics/graphs/index.mdx
@@ -221,17 +221,19 @@ Additionally, the router provides essential GraphOS functionality beyond support
 
 ## Creating graphs
 
-<Tabs labels={['Cloud supergraph','Non-cloud supergraph']}>
+You can create a cloud supergraph or a _non_-cloud supergraph (self-hosted or monograph).
 
-<Tab label="Cloud supergraph">
+<Tabs labels={['Cloud','Non-cloud']}>
+
+<Tab label="Cloud">
 
 To create a cloud supergraph, see the [GraphOS quickstart](../quickstart/cloud/).
 
 </Tab>
 
-<Tab label="Non-cloud supergraph">
+<Tab label="Non-cloud">
 
-To create a _non_-cloud graph (a self-hosted supergraph or a monograph), follow these steps:
+To create a non-cloud graph, follow these steps:
 
 <EnterpriseFeature />
 
