--- a/src/content/technotes/TN0047-error-status-code-200.mdx
+++ b/src/content/technotes/TN0047-error-status-code-200.mdx
@@ -22,7 +22,7 @@ GraphQL introduces a paradigm shift in how APIs are designed and operated, rende
 ## Nature of GraphQL Operations
 
 In a typical REST API, each endpoint corresponds to a specific resource or action, making it straightforward to map HTTP status codes to the outcome of each request.
-However, GraphQL operates differently. Instead of multiple endpoints, GraphQL has a single endpoint that serves as an entry point for executing queries, mutations, and subscriptions.
+However, GraphQL operates differently. Instead of multiple endpoints, GraphQL has a single endpoint that serves as an entry point for executing many different queries, mutations, and subscriptions. You can even execute more then one query in a single request.
 This unified approach allows clients to request precisely the data they need in a single round trip to the server.
 
 ## Granular Error Handling
