--- a/src/content/technotes/TN0047-error-status-code-200.mdx
+++ b/src/content/technotes/TN0047-error-status-code-200.mdx
@@ -39,7 +39,7 @@ In contrast, REST APIs typically follow a serial execution model, where one fail
 
 Therefore, using HTTP status codes to convey the outcome of parallel GraphQL operations would be impractical and misleading.
 
-## Significance of 200 Status Codes
+## Summary
 
 In GraphQL, the presence of a 200 status code indicates that the request was successful from the Apollo Router's perspective.
 This does not necessarily mean that the client received all the data it requested without any errors.
