--- a/src/content/graphos/basics/graphs/visualization.mdx
+++ b/src/content/graphos/basics/graphs/visualization.mdx
@@ -1,39 +1,41 @@
 ---
-title: Graph visualization
-description: Visualize your graph's types, fields, and relationships
+title: Schema visualization
+subtitle: Visualize your graph's types, fields, and relationships
+description: Enhance GraphQL schema comprehension and design with Apollo GraphOS Studio's schema visualization tool.
 ---
 
 As your graph grows, understanding and communicating about its structure and relationships can become more difficult.
-Without understanding a schema's intricacies—particularly how subgraphs relate to one another—development can become blocked or take wrong turns, which need to be corrected later.
+Without understanding a schema's intricacies—particularly how subgraphs relate to one another—development can become blocked or take wrong turns that need to be corrected later.
 
-Schema visualization provides a clear graphical representation of your schema's structure, including types, fields, and relationships.
+**Schema visualization** provides a clear graphical representation of your schema's structure, including types, fields, and relationships.
 It can help identify potential issues in your data model, allowing for more effective schema design. Visualization enhances comprehension, facilitates discussions, and enables better decision-making throughout the development lifecycle.
 
 ## View schema visualization
 
-All GraphOS Studio users can view any graph's schema visualization.
-In [Studio](https://studio.apollographql.com?referrer=docs-content), open the **Schema** page from the left navigation, then the **Visualization** tab.
+All GraphOS Studio users have access to all their organization's graph visualizations.
+In [Studio](https://studio.apollographql.com?referrer=docs-content), open a particular graph's **Schema** page from the left navigation, then click the **Visualization** tab.
 
 <img
-    src="../../img/schema-visualization.png"
-    class="screenshot"
-    alt="Schema visualization in Studio"
+  src="../../img/schema-visualization.png"
+  className="screenshot"
+  alt="Schema visualization in Studio"
 />
 
-Click **Filters** to filter your visualization by root type, subgraph, or tag.
-You can also **Highlight** particular types, tags, or directives.
-
-<img
-    src="../../img/schema-visualization-highlight.png"
-    class="screenshot"
-    alt="Highlighting unused types and fields in a schema visualization"
-/>
-
-Click **More** to **Collapse all fields** or hide particular fields, types, and nodes.
 Click the double right arrow to expand a searchable list of types.
 
 <img
-    src="../../img/schema-visualization-filters.png"
-    class="screenshot"
-    alt="Searching for 'Billing' types in a schema visualization"
+  src="../../img/schema-visualization-filters.png"
+  className="screenshot"
+  alt="Searching for 'Billing' types in a schema visualization"
 />
+
+Click **Filters** to filter your visualization by root type, subgraph, or tag.
+Click **Highlight** to highlight particular types, tags, or directives.
+
+<img
+  src="../../img/schema-visualization-highlight.png"
+  className="screenshot"
+  alt="Highlighting unused types and fields in a schema visualization"
+/>
+
+Click **More** to **Collapse all fields** or hide particular fields, types, and nodes.
