Simplify landing page headings

--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -63,7 +63,7 @@ Apollo makes GraphQL work for you at any stage and any scale, whether you're [ju
 
 <Docset
   icon={<NodeJsIcon />}
-  title="Build a GraphQL server in Node.js"
+  title="Node.js"
   description="Build a production-ready API that handles multiple datasources with Apollo Server."
   path="/apollo-server"
   cta="Explore Apollo Server docs"
@@ -71,14 +71,14 @@ Apollo makes GraphQL work for you at any stage and any scale, whether you're [ju
 <DocsetGrid>
   <Docset
     icon={<JavaIcon />}
-    title="Build a GraphQL server in Java"
+    title="Java"
     description="Explore a tutorial on implementing a GraphQL API with Java and DGS."
     path="https://www.apollographql.com/tutorials/intro-dgs"
     cta="Begin tutorial"
   />
   <Docset
     icon={<CSharpIcon />}
-    title="Build a GraphQL server in C#"
+    title="C#"
     description="Explore a tutorial on implementing a GraphQL API with .NET (C#) and Hot Chocolate."
     path="https://www.apollographql.com/tutorials/intro-hotchocolate"
     cta="Begin tutorial"
