--- a/src/content/graphos/basics/platform-api.mdx
+++ b/src/content/graphos/basics/platform-api.mdx
@@ -8,6 +8,7 @@ The **GraphOS Platform API** enables you to perform GraphOS actions from your ow
 - Fetching details about your organization's graphs
 - Publishing schemas to new or existing variants
 - Running [schema checks](./delivery/schema-checks/) and obtaining their results
+- Creating and editing [schema proposals](./delivery/schema-proposals/), including adding reviewers
 - Removing variants from a graph
 - Removing subgraphs from a supergraph
 - Managing API keys
