--- a/src/content/graphos/cloud-routing/dedicated/lattice-troubleshooting.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/lattice-troubleshooting.mdx
@@ -40,7 +40,7 @@ include_subgraph_errors:
 
 Configuration changes trigger a new launch. Please wait a few minutes for your cloud router to update with this new configuration. You can monitor the deployment status in the Launches page for your graph variant.
 
-Once you've identißfied and resolved the underlying issue, we recommend you turn off subgraph errors by removing the block that sets `include_subgraph_errors` and saving the router configuration YAML again.
+Once you've identified and resolved the underlying issue, we recommend you turn off subgraph errors by removing the block that sets `include_subgraph_errors` and saving the router configuration YAML again.
 
 ## Common issues and errors
 
