DOCS-48 update apollo/brand v0.5.0, migrate all indigo to navy

--- a/src/content/graphos/basics/platform-api.mdx
+++ b/src/content/graphos/basics/platform-api.mdx
@@ -21,7 +21,7 @@ The Platform API is itself represented as a public graph in GraphOS! Documentati
 <p>
   <ButtonLink
     size="md"
-    colorScheme="indigo"
+    colorScheme="navy"
     href="https://studio.apollographql.com/public/apollo-platform/home?variant=main"
   >
     Open Platform API docs
