--- a/src/content/graphos/enterprise/index.mdx
+++ b/src/content/graphos/enterprise/index.mdx
@@ -20,7 +20,7 @@ You can sign up for a GraphOS Enterprise trial to test out most Enterprise featu
 <p>
   <ButtonLink
     size="lg"
-    colorScheme="indigo"
+    colorScheme="navy"
     href="https://studio.apollographql.com/signup?type=enterprise-trial&referrer=docs-content"
     style={{
       marginRight: '10px'
