--- a/src/content/graphos/enterprise/supergraph-architecture-framework.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework.mdx
@@ -12,7 +12,7 @@ The results of the SAF assessment serve as a roadmap for architecture and platfo
 
 <TrackableButton
   size="lg"
-  colorScheme="indigo"
+  colorScheme="navy"
   href="https://saf.apollographql.com/"
   eventName="content_saf"
 >
