--- a/src/content/shared/callout-card.mdx
+++ b/src/content/shared/callout-card.mdx
@@ -14,7 +14,7 @@ import {Stack} from '@chakra-ui/react';
 GraphOS Studio provides core GraphQL schema management features to all users for free, along with advanced security, validation, and integration features to organizations with an [Apollo Team or Enterprise plan](https://www.apollographql.com/pricing).
 
 <Button
-  colorScheme="indigo"
+  colorScheme="navy"
   as="a"
   target="_blank"
   rel="noopener noreferrer"
