--- a/src/content/graphos/basics/index.mdx
+++ b/src/content/graphos/basics/index.mdx
@@ -28,7 +28,7 @@ flowchart LR;
 
 <p>
   <ButtonLink
-    colorScheme="indigo"
+    colorScheme="navy"
     href="/graphos/quickstart/cloud/"
     style={{
       marginRight: '10px'
@@ -93,7 +93,7 @@ An Enterprise plan also provides access to our Graph Champions community and a d
 **Ready to create your first supergraph?**
 
 <ButtonLink
-  colorScheme="indigo"
+  colorScheme="navy"
   href="/graphos/quickstart/cloud/"
   style={{
     marginRight: '10px'
