--- a/src/content/graphos/explorer/sandbox.mdx
+++ b/src/content/graphos/explorer/sandbox.mdx
@@ -15,7 +15,7 @@ You can use Sandbox offline and without an Apollo account. You also [embed Sandb
 
 <Button
   size="lg"
-  colorScheme="indigo"
+  colorScheme="navy"
   as="a"
   target="_blank"
   rel="noopener noreferrer"
