Add supergraph callout

--- a/src/content/graphos/delivery/schema-proposals/creation.mdx
+++ b/src/content/graphos/delivery/schema-proposals/creation.mdx
@@ -10,9 +10,16 @@ This article describes actions in the **Proposal creation** stage of the [schema
 
 <SchemaProposalCreationMermaid />
 
+<Note>
+
+Schema proposals are designed for use with supergraphs. They aren't available for monographs.
+
+</Note>
+
 ## Start a proposal
 
-You can create a new proposal in [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content) from a graph's proposals page. To access the page, either:
+You can create a new proposal in [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content) from a graph's proposals page.
+To access the page, either:
 
   - Open the **Proposals** page from the left navigation from a particular graph.
 
