--- a/src/content/graphos/delivery/schema-proposals/index.mdx
+++ b/src/content/graphos/delivery/schema-proposals/index.mdx
@@ -13,6 +13,12 @@ Once schema design changes are agreed upon, implementing them during subgraph de
 These challenges grow when updating multiple subgraph schemas simultaneously and collaborating across teams.
 Schema development can stall without the clear cross-team communication needed to understand, verify, and track changes.
 
+<Note>
+
+Schema proposals are designed for use with supergraphs. They aren't available for monographs.
+
+</Note>
+
 ## Schema proposals for schema change management
 
 GraphOS **schema proposals** provide centralized schema change management.
