Add UnavailableForMonographs component

--- a/src/content/graphos/delivery/schema-proposals/creation.mdx
+++ b/src/content/graphos/delivery/schema-proposals/creation.mdx
@@ -10,11 +10,7 @@ This article describes actions in the **Proposal creation** stage of the [schema
 
 <SchemaProposalCreationMermaid />
 
-<Note>
-
-Schema proposals are designed for use with supergraphs. They aren't available for monographs.
-
-</Note>
+<UnavailableForMonographs featureName="schema proposals" />
 
 ## Start a proposal
 
