Add file uploads

--- a/src/content/graphos/enterprise/index.mdx
+++ b/src/content/graphos/enterprise/index.mdx
@@ -65,6 +65,7 @@ This architecture helps you satisfy sophisticated requirements around data compl
 [The Apollo Router](/router/) supports a collection of features specific to GraphOS Enterprise organizations. These include:
 
 - **Real-time updates** via [GraphQL subscriptions](/router/executing-operations/subscription-support/)
+- Support for [**file uploads** via multipart requests](/router/executing-operations/file-uploads)
 - **Authentication of inbound requests** via [JSON Web Token (JWT)](/router/configuration/authn-jwt/)
 - [**Authorization** of specific fields and types](/router/configuration/authorization) through the [`@requiresScopes`](/router/configuration/authorization#requiresscopes), [`@authenticated`](/router/configuration/authorization#authenticated), and [`@policy`](/router/configuration/authorization#policy) directives
 - Incremental migration between subgraphs through [the progressive `@override` directive](/federation/entities-advanced/#incremental-migration-with-progressive-override).
