Apply suggestions from code review
Co-authored-by: Edward Huang <edward.huang@apollographql.com>

--- a/src/content/graphos/basics/operations/subscriptions.mdx
+++ b/src/content/graphos/basics/operations/subscriptions.mdx
@@ -139,16 +139,15 @@ After you complete these prerequisites, you begin [executing subscriptions](#exa
 
 ## Default configuration
 
-Subscriptions is enabled automatically for GraphOS Cloud with the following default router configuration:
+Subscriptions are enabled automatically for GraphOS Cloud with the following default router configuration:
 
-```
+```yaml
 subscription:
   enabled: true
   mode:
     passthrough:
       all:
         path: /ws
-```
 
 ## Example execution
 
