Clarify default subscriptions configuration for Cloud Routers (#771)
* Update subscriptions.mdx

* Apply suggestions from code review

Co-authored-by: Edward Huang <edward.huang@apollographql.com>

---------

Co-authored-by: Maria Elisabeth Schreiber <maria.schreiber@apollographql.com>
Co-authored-by: Edward Huang <edward.huang@apollographql.com>

--- a/src/content/graphos/basics/operations/subscriptions.mdx
+++ b/src/content/graphos/basics/operations/subscriptions.mdx
@@ -137,6 +137,18 @@ flowchart LR;
 
 After you complete these prerequisites, you begin [executing subscriptions](#example-execution) on your cloud router.
 
+## Default configuration
+
+Subscriptions are enabled automatically for GraphOS Cloud with the following default router configuration:
+
+```yaml
+subscription:
+  enabled: true
+  mode:
+    passthrough:
+      all:
+        path: /ws
+
 ## Example execution
 
 Let's say our supergraph includes the following subgraphs and partial schemas:
