--- a/src/content/graphos/cloud-routing/dedicated/custom-domains.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/custom-domains.mdx
@@ -6,114 +6,40 @@ subtitle: Connect a custom subdomain to your cloud graphs
 
 <DedicatedPreview />
 
-This guide covers:
-- An [overview of **Graph Compute Units** (GCUs)](#overview) and their performance expectations
-- How to [calculate the number of GCUs](#gcu-calculation) your supergraph needs
-- How to [manage your supergraph's throughput capacity](#manage-capacity) as needs change
+Custom Domains lets you replace the default apollographos.net domain with your own subdomain (eg: api.apollographql.com).
 
-## Overview
+Custom Domains is useful for:
+* Minimizing client-side changes
+* Using your existing CORS policies and security controls
+* Protect your cloud routers with DDoS
 
-Cloud Dedicated pricing is based on the amount of **Graph Compute Units** (GCUs) needed to run your graph. A GCU is a unit of throughput capacity that takes into account:
+## How it works
+Custom Domains runs on CloudFlare's global network. It provides DDoS protections and TLS termination to your cloud routers.
 
-- Processing incoming GraphQL requests
-- Making a query plan across subgraphs
-- Securely routing traffic to your backend services
+Custom Domains support CNAME records which are assigned at the variant level. Custom Domains does not support apex domains or A record configuration.
 
-GCUs run on [AWS in the region of your choice](./#runs-on-aws).
+## Setup Custom Domains
+Later this year, Custom Domains will be available self service through GraphOS Studio. In the meantime, you'll need to open a support request. 
 
-### Performance expectations
+### Step 1: Setup a CNAME
+To get started with Custom Domains, create a CNAME record in your DNS provider that points at your Dedicated variant's existing subdomain.
 
-<PreviewFeature>
-
-While Cloud Dedicated is in [preview](#private-preview), these performance expectations may change.
-
-</PreviewFeature>
-
-From a single GCU, you can expect the following baseline performance:
-
-- 25 requests per second (RPS)
-- 150 subgraph RPS
-- Up to 0.5 megabytes of response data per second
-
-GCU performance varies depending on [additional factors](#throughput-factors), such as payload size. For example, requests that return large payloads may decrease throughput below the baseline 25 RPS. Conversely, requests that return small amounts of data may achieve above the baseline 25 RPS.
-
-Apollo recommends [load testing](#load-testing) your GraphQL workload on Cloud Dedicated before going into production.
-
-### Throughput factors
-
-Beyond RPS, query complexity and response size influence GCU throughput. For example, the following scenarios would decrease relative GCU throughput:
-
-- Requests that query more than five subgraphs
-- Requests that return hundreds or thousands of fields per operation
-
-Requests like this decrease throughput because they require additional compute resources to execute.
-Factor in additional GCUs into your [GCU calculation](#gcu-calculation) if your supergraph receives complex queries or returns large responses.
-
-<Note>
-
-GCUs include burst capacity to handle the occasional complex query. A sustained period of complex queries can [exhaust this capacity](#rate-limiting).
-
-</Note>
-
-### Rate limiting
-
-GCUs aren't rate-limited. However, GCUs do offer a specific amount of throughput capacity. It's possible to temporarily burst GCU throughput for a few seconds. After this period, clients receive 429 errors. Apollo recommends adding retry logic to your clients to minimize dropped requests.
-
-## GCU calculation
-
-If you already use GraphOS, you can calculate your required GCUs using the operation metrics in GraphOS Studio.
-
-1. In [Studio](https://studio.apollographql.com?referrer=docs-content), go to the **Insights** page and select **Last month** as the timeframe.
+For example, create a CNAME for "api.mydomain.com" that points at "current--dedicated.apollographos.net".
 
 <img
   className="screenshot"
-  alt="GraphOS Studio Insights page with timeframe selection"
-  src="../../img/cloud-dedicated/insights-page.png"
+  alt="GraphOS Studio endpoint URL"
+  src="../../img/cloud-dedicated/variant-subdomain.jpg"
 />
 
-2. Scroll down to the **Request Rate** chart. This chart shows the request rate in requests per minute (RPM). 
-3. To calculate your required requests per second (RPS), find the peak RPM and divide it by 60.
-4. Since, as [a baseline](#performance-expectations), 1 GCU can serve 25 RPS, divide your peak RPS by 25 to calculate your required GCUs.
+### Step 2: Verify CNAME
+Next, open a support ticket requesting we enable your new CNAME. Apollo will reply with a new TXT record you'll need to add to your DNS to verify your CNAME.
 
-<img
-  className="screenshot"
-  alt="GraphOS Studio Insights Request Rate chart with highlighted peak"
-  src="../../img/cloud-dedicated/request-rate.png"
-/>
+### Step 3: Go live
+Once your TXT record has been created, email Apollo that you've done so. Upon verification, your new CNAME will be live.
 
-- In the example above, the peak is **19,000 RPM**.
-- _19,000 / 60 = 317_, so the graph has a peak of **317 RPS**.
-- _317 / 25 = 13_, so this workload requires at least **13 GCUs** to operate.
-
-<Note>
-
-Factor in additional GCUs if your supergraph serves [complex or large requests](#throughput-factors).
-
-</Note>
-
-### Load testing
-
-Before going into production on Cloud Dedicated, Apollo highly recommends running a load test to simulate production traffic.
-For example, suppose you run a load test of 10% of a typical day's traffic, which runs well on a single GCU. That means you need at least 10 GCUs to operate your graph on a typical day.
-
-Dedicated trials are available to help you run a load test for free. <TrackableLink href="https://www.apollographql.com/contact-sales?type=dedicated&referrer=docs" eventName="content_contact_cloud">Get in touch</TrackableLink> to start a trial.
-
-## Manage capacity
-
-Cloud Dedicated supports mission-critical production workloads, and you can scale performance to meet the needs of your GraphQL APIs. Dedicated supports up to 40 GCUs per GraphOS variant.
-
-Dedicated starts with 1 GCU per variant. You can add GCUs from the **Cloud Router** page in Studio. Click **Manage Capacity** to the right of **Router Capacity**.
-
-<img
-  className="screenshot"
-  alt="GraphOS Studio managed GCUs"
-  src="../../img/cloud-dedicated/manage-capacity.png"
-/>
-
-Then, select the number of GCUs required and click **Save changes**.
-
-<img
-  className="screenshot"
-  alt="GraphOS Studio edit GCUs"
-  src="../../img/cloud-dedicated/gcus-scale.png"
-/>
+## Limitations
+Custom Domains does not support:
+* Apex records or A records
+* Multiple custom domains per variant
+* Load balancing traffic across multiple variants
