--- a/src/content/graphos/enterprise/index.mdx
+++ b/src/content/graphos/enterprise/index.mdx
@@ -66,7 +66,7 @@ This architecture helps you satisfy sophisticated requirements around data compl
 
 <Tip>
 
-[Learn more about GraphOSRouterFeatures features in the Apollo Router.](/router/enterprise-features/)
+[Learn more about Enterprise features in the Apollo Router.](/router/enterprise-features/)
 
 </Tip>
 
