--- a/src/content/graphos/org/sso/okta-integration-guide.mdx
+++ b/src/content/graphos/org/sso/okta-integration-guide.mdx
@@ -2,13 +2,12 @@
 title: Setting up Apollo SSO with Okta
 ---
 
-<EnterpriseFeature>
+<PremiumFeature>
 
-**Single sign-on (SSO) is available only for [Enterprise plans](https://www.apollographql.com/pricing/).**
+**Single sign-on (SSO) is available only for [Dedicated and Enterprise plans](https://www.apollographql.com/pricing/).**
+This feature is not available as part of an [Enterprise trial](../plans/#enterprise-trials).
 
-Unlike most Enterprise features, this feature is not available as part of an [Enterprise trial](../plans/#enterprise-trials).
-
-</EnterpriseFeature>
+</PremiumFeature>
 
 This guide walks through configuring Okta as your Apollo organization's identity provider (IdP) for single sign-on (SSO).
 You can [use Okta's official GraphOS integration](#using-oktas-official-apollo-graphos-integration) (recommended) or create a custom SAML integration (legacy).
