--- a/src/content/graphos/org/sso/saml-integration-guide.mdx
+++ b/src/content/graphos/org/sso/saml-integration-guide.mdx
@@ -2,13 +2,12 @@
 title: Setting up Apollo SSO with a SAML-based IdP
 ---
 
-<EnterpriseFeature>
+<PremiumFeature>
 
-**Single sign-on (SSO) is available only for [Enterprise plans](https://www.apollographql.com/pricing/).**
+**Single sign-on (SSO) is available only for [Dedicated and Enterprise plans](https://www.apollographql.com/pricing/).**
+This feature is not available as part of an [Enterprise trial](../plans/#enterprise-trials).
 
-Unlike most Enterprise features, this feature is not available as part of an [Enterprise trial](../plans/#enterprise-trials).
-
-</EnterpriseFeature>
+</PremiumFeature>
 
 This guide walks through configuring a generic SAML-based identity provider (IdP) for use with Apollo single sign-on (SSO). These steps require administrative access to your IdP.
 
