--- a/src/content/technotes/TN0013-monolith-to-federation.mdx
+++ b/src/content/technotes/TN0013-monolith-to-federation.mdx
@@ -36,11 +36,11 @@ Start the process by making a "federated graph of one." Your existing monolith c
    ```
 
 1. Deploy an instance of the [Apollo Router](/router/) to your environment.
-   <EnterpriseFeature
-     text={
-       "Self-hosting the Apollo Router is limited to [GraphOS Enterprise plans](/graphos/enterprise/). Other plan types use [managed cloud routing with GraphOS](/graphos/cloud-routing). Check out the [pricing page](https://www.apollographql.com/pricing/) to learn more."
-     }
-   />
+   <EnterpriseFeature>
+
+    Self-hosting the Apollo Router is limited to [GraphOS Enterprise plans](/graphos/enterprise/). Other plan types use [managed cloud routing with GraphOS](/graphos/cloud-routing). Check out the [pricing page](https://www.apollographql.com/pricing/) to learn more.
+
+   </EnterpriseFeature>
 1. Set up [header propagation](/router/configuration/header-propagation/) so that the monolith receives any necessary headers from the router.
 1. Set up internal routing rules to redirect client requests to the Apollo Router instead of your monolith.
 1. Enable usage metrics reporting to GraphOS Studio.
