Clean up Enterprise page

--- a/src/content/shared/graphos-router-features.mdx
+++ b/src/content/shared/graphos-router-features.mdx
@@ -1,5 +1,5 @@
 
-[The Apollo Router](https://www.apollographql.com/docs/router/) supports a collection of features specific to GraphOS. These include:
+[The Apollo Router](https://www.apollographql.com/docs/router/) supports a collection of premium features specific to GraphOS. These include:
 
 - **Real-time updates** via [GraphQL subscriptions](/router/executing-operations/subscription-support/)
 - **Authentication of inbound requests** via [JSON Web Token (JWT)](/router/configuration/authn-jwt/)
