--- a/src/content/graphos/enterprise/index.mdx
+++ b/src/content/graphos/enterprise/index.mdx
@@ -7,11 +7,7 @@ description: Overview
 
 See the left navigation for a list of all Enterprise-specific articles from across the GraphOS documentation.
 
-<Tip>
-
 To compare GraphOS feature support across all plan types, see the [pricing page](https://www.apollographql.com/pricing/).
-
-</Tip>
 
 ## Enterprise trial
 
@@ -60,15 +56,11 @@ This architecture helps you satisfy sophisticated requirements around data compl
 
 </Tip>
 
-### Apollo Router features
+### Premium GraphOS Router features
 
 <GraphOSRouterFeatures />
 
-<Tip>
-
-[Learn more about Enterprise features in the Apollo Router.](/router/enterprise-features/)
-
-</Tip>
+[Learn more about premium GraphOS features.](/router/enterprise-features/)
 
 ## Schema pipeline
 
@@ -85,15 +77,9 @@ The centralized proposal process fosters collaboration and strengthens schema go
 
 This increased coordination improves design decisions and accountability, streamlining development cycles.
 
-<Tip>
-
-[Learn more about schema proposals.](../delivery/schema-proposals/)
-
-</Tip>
-
 ### Schema filtering with contracts
 
-GraphOS [**Contracts**](../delivery/contracts/) enable you to filter your supergraph schema's types and fields according to different inclusion and exclusion rules you define:
+GraphOS [Contracts](../delivery/contracts/) enable you to filter your supergraph schema's types and fields according to different inclusion and exclusion rules you define:
 
 ```mermaid
 graph LR;
@@ -129,12 +115,6 @@ graph LR;
 
 Contracts are especially useful if you want to expose a subset of your supergraph as a public API.
 
-<Tip>
-
-[Learn more about GraphOS contracts.](../delivery/contracts/)
-
-</Tip>
-
 ## Organization management
 
 You can integrate GraphOS with your organization's identity provider (IdP) to enable single sign-on (SSO) for [GraphOS Studio](https://studio.apollographql.com/?referrer=docs-content).
@@ -145,6 +125,12 @@ SSO configuration is available for the following:
 - [Azure AD](../org/sso/azure-ad-integration-guide/)
 - [Generic SAML](../org/sso/saml-integration-guide/)
 
+<Note>
+
+SSO is also available on the [Dedicated plan](https://www.apollographql.com/pricing/).
+
+</Note>
+
 Additionally, Enterprise organizations can export an [audit log](../org/audit-log/) of material actions taken by organization members.
 
 ## Metrics and reporting
@@ -153,4 +139,10 @@ GraphOS Studio offers a performant and intuitive UI to help all GraphOS users mo
 The following features are only available to GraphOS Enterprise organizations:
 
 - The [Apollo Datadog integration](../metrics/datadog-integration) lets you forward performance metrics to your Datadog account. Datadog supports an advanced function API, which enables you to create sophisticated visualizations and alerts for GraphQL metrics.
-- [Build status notifications](../metrics/notifications/) let you notify your team via webhook whenever GraphOS attempts to build a new supergraph schema for your federated graph.
+- [Build status notifications](../metrics/notifications/build-status-notification) let you notify your team via webhook whenever GraphOS attempts to build a new supergraph schema for your federated graph.
+
+  <Note>
+
+  Build status notifications are also available on the [Dedicated plan](https://www.apollographql.com/pricing/).
+
+  </Note>
