--- a/src/content/graphos/basics/routing.mdx
+++ b/src/content/graphos/basics/routing.mdx
@@ -67,7 +67,7 @@ Apollo also offers the [`@apollo/gateway`](/federation/v1/gateway/) library, but
 
 Since the Apollo Router is [source-available](https://www.apollographql.com/blog/evaluating-apollo-router-understanding-free-and-open-vs-commercial-features), you can use the router's codebase without connecting it to GraphOS. If you self-host the router, you can [connect it to GraphOS](./quickstart/self-hosted#6-connect-the-router-to-graphos) for additional functionality. Cloud routers are automatically connected to GraphOS.
 
-A router connected to GraphOS, regardless of whether it's cloud- or self-hosted is called a **GraphOS Router**, and has access to [specific GraphOS features](/docs/router/graphos-features/) depending on the connected GraphOS organization's plan.
+A router connected to GraphOS, regardless of whether it's cloud- or self-hosted is called a **GraphOS Router**, and has access to [specific GraphOS features](../enterprise#graphos-router-features) depending on the connected GraphOS organization's plan.
 
 ### Router comparison
 
